// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> <Sapce /> <Flex /> together plays properly renders child of <Space />(no styles) and <Flex />(no styles) correctly 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde Spaceweb__Space-njatzl-0 jBqZrs"
  >
    <span
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      Flex Item #1
    </span>
    <span
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      Flex Item #2
    </span>
  </div>
</div>
`;

exports[`<Flex /> flex renders an inline styled child with flex attribute and flex properties correctly 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
    style="background-color: red; height: 100px;"
  />
</div>
`;

exports[`<Flex /> flexDirection renders a child with flexDirection attribute and flex properties correctly 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge"
  />
</div>
`;
